# Eindopdr-ATP

./: CMakeLists.txt  setup.py
simulatie.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/actuators/: LinearActuator.cpp  WaterPump.cpp  unitTests.cpp
src/microcontroller/: microcontroller.cpp  pin.hpp
src/sensors/: DHT22.cpp  SEN0308.cpp  bindings(niet-in-gebruik).cpp
tests/: CLI_simulator.py  regelsysteem.py  timer-log.txt  unit_tests.py
